--- a/snake.html
+++ b/snake.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Порожній лабіринт</title>
+  <title>Лабіринт змійка</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,7 +15,7 @@
       <section class="description"><p>У проекті є кілька фіксованих лабіринтів. У кожному лабіринті ви маєте довести робота до виходу – клітини, поміченої зеленим кружком.
         Сам лабіринт не відомий і робота немає сенсорів, щоб його дослідити, але відомий тип лабіринту і його розміри.
         Цього достатньо, щоби побудувати маршрут і віддати потрібні команди роботу.</p>
-        <p>У цій задачі лабіринт — це порожня кімната, оточена стіною по периметру, у якій з верхнього лівого кута з координатами (1, 1) потрібно пройти правий нижній з координатами (width-2, height-2).
+        <p>У цій задачі лабіринт у вигляді змійки, у якій з верхнього лівого кута з координатами (1, 1) потрібно пройти лівий нижній з координатами (1, height-2).
         Щоб рухати робота використовуйте</p><pre>
         robot.moveTo(Direction.Right);
         robot.moveTo(Direction.Down);
@@ -54,8 +54,6 @@ function traverseMaze(robot, width, height) {
         <li><a class="active" href="#maze_1">empty 1</a></li>
         <li><a href="#maze_2">empty2</a></li>
         <li><a href="#maze_3">empty3</a></li>
-        <li><a href="#maze_4">empty4</a></li>
-        <li><a href="#maze_5">empty5</a></li>
         <li><button id="start">Start</button></li>
       </ul>
       <div id="app">
@@ -73,7 +71,7 @@ function traverseMaze(robot, width, height) {
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="settings.js"></script>
 
-  <script src="index.js" type="module"></script>
+  <script src="snake.js" type="module"></script>
 </body>
 
 </html>
