--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <section class="description"><p>У проекті є кілька фіксованих лабіринтів. У кожному лабіринті ви маєте довести робота до виходу – клітини, поміченої зеленим кружком.
         Сам лабіринт не відомий і робота немає сенсорів, щоб його дослідити, але відомий тип лабіринту і його розміри.
         Цього достатньо, щоби побудувати маршрут і віддати потрібні команди роботу.</p>
-        <p>У цій задачі лабіринт — це порожня кімната, оточена стіною по периметру, у якій з верхнього лівого кута з координатами (1, 1) потрібно пройти правий нижній з координатами (width-2, height-2).
+        <p>У цій задачі лабіринт — це порожня кімната, оточена стіною по периметру, у якій з верхнього лівого кута з координатами (1, 1) потрібно пройти у правий нижній кут з координатами (width-2, height-2).
         Щоб рухати робота використовуйте</p><pre>
         robot.moveTo(Direction.Right);
         robot.moveTo(Direction.Down);
